# face_oracle

./: CMakeLists.txt  README.md  cam_http_server.py  client.py  dummy_publisher.py  face_oracle.py  face_oracle_client.py  facerec_from_webcam_faster.py  mjpeg_streamer.py  newpubkey.pem  package.xml  ravestate_ontology.yml  reset_cam.py  ros_video_processor.py  test_ws_server.py  usbreset  video_processor.py  webcam_video_processor.py  ws_client.py  ws_server.py
